--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>vuetest</title>
+  <title>原鑫的个人博客</title>
   <style>
     html,
     body {
