--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2020-01-08 10:28:43
+ * @LastEditTime : 2020-01-15 15:23:11
+ * @LastEditors  : Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: /myblog/index.html
+ -->
 <!DOCTYPE html>
 <html>
 
@@ -23,5 +31,17 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
-
+<script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.0.min.js"></script>
+<script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.min.js"></script>
+<script type="text/javascript">
+    L2Dwidget.init({"display": {
+        "superSample": 2,
+        "width": 200,
+        "height": 400,
+            "position": "right",
+                "hOffset": 0,
+        "vOffset": 0
+        }
+    });
+</script>
 </html>
